Add: [1]switch between project categories  [2]template and static files for about page

--- a/node/static/node/work_style.css
+++ b/node/static/node/work_style.css
@@ -60,6 +60,12 @@ li#work a {
 	color: black;
 	padding: 10px;
 	padding-bottom: 20px;
+	cursor: pointer;
+	cursor: hand;
+}
+
+.navColList > li:hover {
+	color: rgb(110, 110, 110);
 }
 
 .workContent {
