--- a/node/templates/node/about.html
+++ b/node/templates/node/about.html
@@ -1,24 +1,23 @@
 {% load staticfiles %}
+{% load node_extras %}
 
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html>
 	<head>
-		<title>Luyao Hou</title>
+		<title>Luyao Hou - About</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link type="text/css" rel="stylesheet" 
-		      href="{% static 'node/index_style.css' %}" />
+		      href="{% static 'node/about_style.css' %}" />
 		<link type="text/css" rel="stylesheet" 
 			  href="{% static 'node/bootstrap_3.3.6/css/bootstrap.min.css' %}" />
 		<!-- include jQuery library -->
 		<script src="{% static 'node/jquery_2.2.4.js' %}"></script>
 		<script src="{% static 'node/bootstrap_3.3.6/js/bootstrap.min.js' %}">
 		</script>
-		<script src="{% static 'node/index_js.js' %}"></script>
+		<script src="{% static 'node/about_js.js' %}"></script>
 		<script type="text/javascript">
-			var data = {{vals|safe}};
 		</script>
 	</head>
-
 	<body>
 		<div class="titleBar">
 			<ul class="navList">
@@ -29,18 +28,5 @@
 				<li><a href="http://google.com">Contact</a></li>
 			</ul>
 		</div>
-		<div class="main">
-			<canvas class="bgCanvas"></canvas>
-			<div id="mainImg">
-				<img id="profile" src="{% static 'node/img/profile_pic.jpg' %} " />
-			</div>
-			<div id="mainIntro">
-				<h2>About</h2>
-				<ul id="mainInfo">
-					<li>First</li>
-					<li>Second</li>
-				</ul>
-			</div>
-		</div>
-	</body>
+	<body>
 </html>
