--- a/node/templates/node/work.html
+++ b/node/templates/node/work.html
@@ -19,13 +19,15 @@
 			var imgs = {{imgs|safe}};
 			var projectTitles = JSON.parse("{{projectTitles|escapejs}}");
 			var projectContents = JSON.parse("{{projectContents|escapejs}}");
+			var projectCategories = JSON.parse("{{projectCategories|escapejs}}");
+			var categoryColors = JSON.parse("{{categoryColors|escapejs}}");
 		</script>
 	</head>
 	<body>
 		<div class="titleBar">
 			<ul class="navList">
 				<li><a href="{% url 'index' %}">Main</a></li>
-				<li><a href="http://google.com">About</a></li>
+				<li id="about"><a href="{% url 'about' %}">About</a></li>
 				<li id="work"><a href="{% url 'work' %}">Work</a></li>
 				<li><a href="http://google.com">Memos</a></li>
 				<li><a href="http://google.com">Contact</a></li>
@@ -33,12 +35,13 @@
 		</div>
 		<div class="workMain">
 			<div class="navCol">
-				<ul>
+				<ul class="navColList">
 					<li>All</li>
-					<li>Python</li>
-					<li>Web</li>
-					<li>iOS</li>
-					<li>Others</li>
+					{% if categories %}
+						{% for category in categories %}
+							<li>{{category}}</li>
+						{% endfor %}
+					{% endif %}
 				</ul>
 			</div>
 			<div class="workContent">
@@ -55,8 +58,8 @@
 							</div>
 						</div>
 					{% endfor %}
+					<p>No Related Project</p>
 				{% else %}
-					<p>No projects</p>
 				{% endif %}
 			</div>
 		</div>
