--- a/node/static/node/about_style.css
+++ b/node/static/node/about_style.css
@@ -35,3 +35,68 @@ li#about a {
 .navList > li > a:hover {
 	color: gray;
 }
+
+div#aboutContent {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	text-align: center;
+}
+
+div.infoEntry {
+	position: relative;
+	left: 25%;
+	width: 50%;
+	min-height: 210px;
+	display: block;
+	margin-top: 50px;
+	background-color: white;
+	text-align: left;
+	border: 1px solid gray;
+	overflow: hidden;
+}
+
+div.infoEntry:first-child {
+	margin-top: 100px;
+}
+
+img.showAllButton {
+	position: absolute;
+	background-color: blue;
+	width: 15px;
+	height: 15px;
+	top: 35px;
+	right: 5%;
+	cursor: pointer;
+	cursor: hand;
+	z-index: 1;
+}
+
+img.showAllButton:hover {
+	background-color: black;
+}
+
+div.infoEntry > h3 {
+	position: relative;
+	top: 5px;
+	left: 5%;
+	color: black;
+	z-index: 0;
+}
+
+div.infoEntry > hr {
+	position: relative;
+	float: left;
+	top: -10px;
+	left: 5%;
+	width: 75%;
+	border: 1px solid rgb(100, 100, 100);
+}
+
+div.infoEntry > p {
+	position: relative;
+	top: -10px;
+	left: 8%;
+	width: 90%;
+	float: left;
+}
