--- a/node/static/node/about_style.css
+++ b/node/static/node/about_style.css
@@ -36,6 +36,38 @@ li#about a {
 	color: gray;
 }
 
+div#aboutMain {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+}
+
+div#navCol {
+	position: fixed;
+	float: left;
+	width: 15%;
+	height: 100%;
+	z-index: 10;
+}
+
+div#navCol > ul {
+	position: absolute;
+	margin-top: 150px;
+	list-style-type: none;
+}
+
+div#navCol > ul > li {
+	font-size: 15px;
+	color: black;
+	padding: 10px;
+	cursor: pointer;
+	cursor: hand;
+}
+
+div#navCol > ul > li:hover {
+	color: rgb(110, 110, 110);
+}
+
 div#aboutContent {
 	position: absolute;
 	width: 100%;
@@ -49,7 +81,7 @@ div.infoEntry {
 	width: 50%;
 	min-height: 210px;
 	display: block;
-	margin-top: 50px;
+	margin-bottom: 50px;
 	background-color: white;
 	text-align: left;
 	border: 1px solid gray;
@@ -58,6 +90,13 @@ div.infoEntry {
 
 div.infoEntry:first-child {
 	margin-top: 100px;
+}
+
+#placeholder {
+	position: relative;
+	margin-top: 80px;
+	height: 1px;
+	background-color: rgba(255, 255, 255, 0);
 }
 
 img.showAllButton {
