Add: [1]create contact page

--- a/node/templates/node/work.html
+++ b/node/templates/node/work.html
@@ -30,7 +30,7 @@
 				<li id="about"><a href="{% url 'about' %}">About</a></li>
 				<li id="work"><a href="{% url 'work' %}">Work</a></li>
 				<li><a href="http://google.com">Memos</a></li>
-				<li><a href="http://google.com">Contact</a></li>
+				<li id="contact"><a href="{% url 'contact' %}">Contact</a></li>
 			</ul>
 		</div>
 		<div class="workMain">
