--- a/node/templates/node/contact.html
+++ b/node/templates/node/contact.html
@@ -32,21 +32,22 @@
 				   id="emailLink">hly.charles@gmail.com</a>
 			</div>
 			<div id="socialDiv">
-				<h1>Social</h1>
-				<a href="http://www.baidu.com">
-					<div id="githubLink" class="accountDiv">
-						<img id="githubLogo" class="socialLogo" 
-						     src="{% static 'node/img/profile_pic.jpg' %} " />
-						<p>GitHub</p>
-					</div>
-				</a>
-				<a href="http://www.baidu.com">
-					<div id="linkedInLink" class="accountDiv">
-						<img id="linkedInLogo" class="socialLogo" 
-						     src="{% static 'node/img/profile_pic.jpg' %} " />
-						<p>GitHub</p>
-					</div>
-				</a>
+				<h1>Links</h1>
+				<div id="githubLink" class="accountDiv">
+					<img id="githubLogo" class="socialLogo" 
+						 src="{% static 'node/img/logo/octocat.png' %} " />
+					<p>GitHub</p>
+				</div>
+				<div id="linkedInLink" class="accountDiv">
+					<img id="linkedInLogo" class="socialLogo" 
+					     src="{% static 'node/img/logo/linkedIn.png' %} " />
+					<p>LinkedIn</p>
+				</div>
+				<div id="facebookLink" class="accountDiv">
+					<img id="facebookLogo" class="socialLogo" 
+					     src="{% static 'node/img/logo/facebook.png' %} " />
+					<p>Facebook</p>
+				</div>
 			</div>
 		</div>
 	<body>
