--- a/node/templates/node/index.html
+++ b/node/templates/node/index.html
@@ -27,7 +27,7 @@
 				<img id="profile" src="{% static 'node/img/profile_pic.jpg' %} " />
 			</div>
 			<div id="mainIntro">
-				<h2>About</h2>
+				<h2>Luyao Hou</h2>
 				<ul id="mainInfo">
 					<li>First</li>
 					<li>Second</li>
