--- a/node/static/node/about_style.css
+++ b/node/static/node/about_style.css
@@ -1,31 +1,43 @@
 li#about a {
-	color: #6c6c6c;
+	box-shadow: inset 0px -2px #3293bc;
+	-webkit-box-shadow: inset 0px -2px #3293bc;
+	-moz-box-shadow: inset 0px -2px #3293bc;
 }
 
 div#aboutMain {
 	position: absolute;
 	width: 100%;
 	height: 100%;
+	background-color: rgb(252, 252, 252);
 }
 
 div#navCol {
 	position: fixed;
 	float: left;
 	width: 15%;
-	height: 100%;
+	height: auto;
 	z-index: 10;
+	margin-top: 100px;
+	background-color: rgb(240, 240, 240);
+	padding-top: 20px;
+	padding-bottom: 20px;
+}
+
+div#navCol > h5 {
+	position: relative;
+	left: 10%;
+	font-weight: bold;
 }
 
 div#navCol > ul {
-	position: absolute;
-	margin-top: 150px;
 	list-style-type: none;
 }
 
 div#navCol > ul > li {
 	font-size: 15px;
 	color: black;
-	padding: 10px;
+	padding-top: 10px;
+	padding-bottom: 10px;
 	cursor: pointer;
 	cursor: hand;
 }
@@ -47,11 +59,11 @@ div.infoEntry {
 	width: 50%;
 	min-height: 210px;
 	display: block;
-	margin-bottom: 50px;
+	margin-bottom: 40px;
 	background-color: white;
 	text-align: left;
-	border: 1px solid gray;
 	overflow: hidden;
+	background-color: rgba(245, 245, 245, 0.5);;
 }
 
 div.infoEntry:first-child {
@@ -67,41 +79,45 @@ div.infoEntry:first-child {
 
 img.showAllButton {
 	position: absolute;
-	background-color: blue;
-	width: 15px;
-	height: 15px;
-	top: 35px;
+	background-color: rgb(245, 245, 245);
+	width: 30px;
+	height: 30px;
+	top: 20px;
 	right: 5%;
 	cursor: pointer;
 	cursor: hand;
-	z-index: 1;
-}
-
-img.showAllButton:hover {
-	background-color: black;
 }
 
 div.infoEntry > h3 {
 	position: relative;
-	top: 5px;
-	left: 5%;
-	color: black;
+	color: white;
 	z-index: 0;
+	background-color: rgba(85, 85, 85, 0.8);
+	text-align: right;
+	width: 33%;
+	padding-right: 2px;
+	padding-bottom: 2px;
 }
 
-div.infoEntry > hr {
+div.infoContent {
 	position: relative;
-	float: left;
-	top: -10px;
-	left: 5%;
-	width: 75%;
-	border: 1px solid rgb(100, 100, 100);
+	width: 100%;
+	background-color: rgb(245, 245, 245);
 }
 
-div.infoEntry > p {
-	position: relative;
-	top: -10px;
-	left: 8%;
-	width: 90%;
-	float: left;
+div.infoContent > p {
+	width: 100%;
+	color: black;
+	padding-left: 10%;
+	padding-top: 10px;
+	padding-bottom: 10px;
+}
+
+div.overlay {
+	position: absolute;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(255, 255, 255, 0);
+	z-index: 5;
 }
