--- a/node/static/node/contact_style.css
+++ b/node/static/node/contact_style.css
@@ -1,27 +1,16 @@
 li#contact a {
-	color: #6c6c6c;
+	box-shadow: inset 0px -2px #3293bc;
+	-webkit-box-shadow: inset 0px -2px #3293bc;
+	-moz-box-shadow: inset 0px -2px #3293bc;
 }
 
 /* main content */
-
-/*
-div.contentDiv {
-	position: absolute;
-	left: 20%;
-	width: 60%;
-	height: auto;
-	background-color: white;
-	padding-left: 10px;
-	padding-top: 20px;
-	padding-bottom: 20px;
-	border-radius: 10px;
-} */
 
 div#contactMain {
 	position: absolute;
 	width: 100%;
 	height: 100%;
-	background-color: #b2d3d3;
+	background-color: rgb(249, 249, 249);
 }
 
 div.contentDiv > p, a#emailLink, 
@@ -39,32 +28,52 @@ div.basicInfo {
 	text-align: center;
 }
 
+div.basicInfo > * {
+	color: white;
+}
+
 div#phoneDiv {
 	left: 5%;
-	background-color: white;
+	background-color: #febd46;
+}
+
+div#phoneDiv > p {
+	color: white;
 }
 
 div#emailDiv {
 	right: 5%;
-	background-color: white;
+	background-color: #2b92be;
+}
+
+div#emailDiv > a {
+	color: white;
 }
 
 div#socialDiv {
 	position: absolute;
 	left: 5%;
 	width: 90%;
-	background-color: white;
+	background-color: #f05c34;
 	text-align: center;
+}
+
+div#socialDiv > * {
+	color: white;
 }
 
 div.accountDiv {
 	width: 150px;
 	height: 50px;
-	border: 1px black solid;
 	display: inline-block;
 	margin-right: 50px;
 	text-align: left;
-	padding: 10px;
+	padding: 5px;
+}
+
+div.accountDiv:hover {
+	cursor: pointer;
+	cursor: hand;
 }
 
 img.socialLogo {
