--- a/node/templates/node/nav.html
+++ b/node/templates/node/nav.html
@@ -5,11 +5,12 @@
 				position: fixed;
 				width: 100%;
 				height: 60px;
-				background-color: black;
+				background-color: white;
 				margin-top: 0px;
 				margin-left: 0px;
 				padding: 0px;
 				z-index: 100;
+				box-shadow: 0px 1px 1px rgb(150, 150, 150);
 			}
 
 			.navList {
@@ -27,7 +28,7 @@
 				display: inline-block;
 				text-decoration:none; 
 				padding:0 30px;
-				color: white;
+				color: black;
 				font-size: 15px;
 			}
 
@@ -39,7 +40,7 @@
 	<body>
 		<div class="titleBar">
 			<ul class="navList">
-				<li><a href="{% url 'index' %}">Main</a></li>
+					<li id="main"><a href="{% url 'index' %}">Main</a></li>
 					<li id="about"><a href="{% url 'about' %}">About</a></li>
 					<li id="work"><a href="{% url 'work' %}">Work</a></li>
 					<!-- <li><a href="http://google.com">Memos</a></li> -->
