--- a/node/templates/node/work.html
+++ b/node/templates/node/work.html
@@ -46,7 +46,7 @@
 							<div class="projectMask"></div>
 							<div class="projectContent">
 								<h3></h3>
-								<p></p>
+								<p class="projectDscr"></p>
 							</div>
 							<div class="projectOverlay">
 								<img class="showMoreButton" 
