--- a/node/static/node/contact_style.css
+++ b/node/static/node/contact_style.css
@@ -15,14 +15,13 @@ div#contactMain {
 
 div.contentDiv > p, a#emailLink, 
 div.basicInfo > p {
-	font-size: 18px;
+	font-size: 125%;
 	font-family: Helvetica, sans-serif;
 	color: black;
 }
 
 div.basicInfo {
-	position: absolute;
-	top: 100px;
+	margin-top: 100px;
 	width: 42.5%;
 	display: inline-block;
 	text-align: center;
@@ -33,7 +32,7 @@ div.basicInfo > * {
 }
 
 div#phoneDiv {
-	left: 5%;
+	margin-left: 5%;
 	background-color: #febd46;
 }
 
@@ -42,7 +41,7 @@ div#phoneDiv > p {
 }
 
 div#emailDiv {
-	right: 5%;
+	margin-left: 5%;
 	background-color: #2b92be;
 }
 
