Filled in contents and external links

--- a/node/templates/node/index.html
+++ b/node/templates/node/index.html
@@ -29,8 +29,9 @@
 			<div id="mainIntro">
 				<h2>Luyao Hou</h2>
 				<ul id="mainInfo">
-					<li>First</li>
-					<li>Second</li>
+					<li>Junior Student</li>
+					<li>Computer Science</li>
+					<li>Music Lover</li>
 				</ul>
 			</div>
 		</div>
