--- a/node/templates/node/work.html
+++ b/node/templates/node/work.html
@@ -20,6 +20,7 @@
 			var imgs = {{imgs|safe}};
 			var projectTitles = JSON.parse("{{projectTitles|escapejs}}");
 			var projectContents = JSON.parse("{{projectContents|escapejs}}");
+			var projectLinks = JSON.parse("{{projectLinks|escapejs}}");
 			var projectCategories = JSON.parse("{{projectCategories|escapejs}}");
 			var categoryColors = JSON.parse("{{categoryColors|escapejs}}");
 		</script>
