Add: [1]show project counts

--- a/node/templates/node/index.html
+++ b/node/templates/node/index.html
@@ -29,9 +29,8 @@
 			<div id="mainIntro">
 				<h2>Luyao Hou</h2>
 				<ul id="mainInfo">
-					<li>Junior Student</li>
+					<li>Junior at CMU</li>
 					<li>Computer Science</li>
-					<li>Music Lover</li>
 				</ul>
 			</div>
 		</div>
