--- a/node/templates/node/work.html
+++ b/node/templates/node/work.html
@@ -30,7 +30,7 @@
 		<div class="workMain">
 			<div class="navCol">
 				<h5>Categories:</h5>
-				<ul class="navColList">
+				<ul class="navColList" id="navColList">
 					<li>All</li>
 					{% if categories %}
 						{% for category in categories %}
