--- a/node/templates/node/contact.html
+++ b/node/templates/node/contact.html
@@ -10,6 +10,8 @@
 		      href="{% static 'node/contact_style.css' %}" />
 		<link type="text/css" rel="stylesheet" 
 			  href="{% static 'node/bootstrap_3.3.6/css/bootstrap.min.css' %}" />
+		<!-- favicon -->
+		<link rel="shortcut icon" href="{%  static 'node/img/favicon.ico' %}">
 		<!-- include jQuery library -->
 		<script src="{% static 'node/jquery_2.2.4.js' %}"></script>
 		<script src="{% static 'node/bootstrap_3.3.6/js/bootstrap.min.js' %}">
