--- a/node/templates/node/about.html
+++ b/node/templates/node/about.html
@@ -5,22 +5,11 @@
 <html>
 	<head>
 		<title>Luyao Hou - About</title>
-		<meta name="viewport" content="width=device-width, initial-scale=1">
+		{% include "node/header.html" %}
 		<link type="text/css" rel="stylesheet" 
 		      href="{% static 'node/about_style.css' %}" />
-		<link type="text/css" rel="stylesheet" 
-			  href="{% static 'node/bootstrap_3.3.6/css/bootstrap.min.css' %}" />
-		<!-- favicon -->
-		<link rel="shortcut icon" href="{%  static 'node/img/favicon.ico' %}">
-		<!-- include jQuery library -->
-		<script src="{% static 'node/jquery_2.2.4.js' %}"></script>
 		<script src="{% static 'node/jQueryRotate.js' %}"></script>
-		<script src="{% static 'node/bootstrap_3.3.6/js/bootstrap.min.js' %}">
-		</script>
 		<script src="{% static 'node/about_js.js' %}"></script>
-		<script type="text/javascript">
-
-		</script>
 	</head>
 	<body>
 		{% include "node/nav.html" %}
