Setup prototype of bulletin boards

--- a/mysite/src/app.scss
+++ b/mysite/src/app.scss
@@ -2,7 +2,7 @@
 
 .screen-container {
     margin: $top-spacing $side-spacing 0 $side-spacing;
-    overflow: hidden;
+    overflow: auto;
     position: relative;
     height: auto;
 }
