Setup modal view

--- a/mysite/src/variable.scss
+++ b/mysite/src/variable.scss
@@ -9,6 +9,8 @@ $bulletin-width: percentage(24/100);
 $bulletin-margin: (1 - (3 * $bulletin-width)) / 2;
 $bulletin-height: 200px;
 
+$close-button-side: 30px;
+
 $insta-board-color: grey;
 $resume-board-color: #7aadf4;
 
