Setup Me screen

--- a/mysite/src/screen/style.scss
+++ b/mysite/src/screen/style.scss
@@ -12,8 +12,7 @@
         height: auto;
 
         h2 {
-            font-weight: lighter;
-            font-family: $main-title-font, "Helvetica Neue", Helvetica, serif;
+            font-family: $main-title-font;
             font-size: $page-title-size;
             margin: 0;
         }
