--- a/mysite/src/variable.scss
+++ b/mysite/src/variable.scss
@@ -16,4 +16,5 @@ $resume-board-color: #7aadf4;
 
 $page-title-size: 50px;
 
-$main-title-font: "Futura";
+$main-title-font: "Helvetica Neue", Helvetica, sans-serif;
+$nav-font: "Helvetica Neue", Helvetica, sans-serif;
