--- a/mysite/src/variable.scss
+++ b/mysite/src/variable.scss
@@ -11,6 +11,8 @@ $bulletin-height: 200px;
 
 $close-button-side: 30px;
 
+$transparent-background-color: rgba(0, 0, 0, 0);
+$dim-background-color: rgba(0, 0, 0, 0.8);
 $insta-board-color: grey;
 $resume-board-color: #7aadf4;
 
