--- a/mysite/src/detailComponent/verticalLayoutDetail.scss
+++ b/mysite/src/detailComponent/verticalLayoutDetail.scss
@@ -1,6 +1,6 @@
 @import "../variable";
 
-.detail-container {
+.detail-vertical {
     position: absolute;
     top: 0;
     left: 0;
@@ -12,7 +12,6 @@
         border: none;
         width: 100%;
         height: 50%;
-        margin-bottom: $base-spacing;
 
         img {
             width: 100%;
@@ -22,8 +21,16 @@
     }
 
     .detail-content {
-        p {
+        padding-top: $img-content-spacing;
+        text-align: center;
+        border: none;
+        font-size: $content-size;
+
+        .content-wrapper {
+            display: inline-block;
+            text-align: left;
             color: white;
+            white-space: pre-wrap;
         }
     }
 }
