--- a/mysite/src/screenComponent/bulletinBoard.scss
+++ b/mysite/src/screenComponent/bulletinBoard.scss
@@ -1,7 +1,9 @@
 @import "../variable";
 
 .bulletin-container {
+    position: relative;
     width: 100%;
     height: auto;
     margin-bottom: $board-spacing;
+    overflow: hidden;
 }
