--- a/mysite/src/variable.scss
+++ b/mysite/src/variable.scss
@@ -9,6 +9,7 @@ $header-margin: ($base-spacing * 3);
 $bulletin-width: percentage(30/100);
 $bulletin-margin: (percentage(1) - ($bulletin-width * 3)) / 2;
 $bulletin-height: 200px;
+$thumbnail-dimension: 80%;
 
 $close-button-side: 30px;
 
@@ -21,7 +22,8 @@ $category-title-padding-h: 6px;
 $transparent-background-color: rgba(0, 0, 0, 0);
 $dim-background-color: rgba(0, 0, 0, 0.8);
 $insta-board-color: grey;
-$resume-board-color: rgba(122, 173, 244, 0.4);
+$resume-board-color: #505498;
+$github-board-color: #101010;
 $gray-border-color: rgba(200, 200, 200, 1);
 
 $gray-text-color: rgba(160, 160, 160, 1);
