--- a/mysite/src/variable.scss
+++ b/mysite/src/variable.scss
@@ -21,6 +21,7 @@ $category-title-padding-h: 6px;
 
 $transparent-background-color: rgba(0, 0, 0, 0);
 $dim-background-color: rgba(0, 0, 0, 0.8);
+$light-header-background-color: rgba(210, 210, 210, 0.4);
 $insta-board-color: grey;
 $resume-board-color: #505498;
 $github-board-color: #101010;
