--- a/mysite/src/modalView.scss
+++ b/mysite/src/modalView.scss
@@ -7,6 +7,7 @@
     width: 100%;
     height: 100%;
     background-color: $dim-background-color;
+    z-index: 10;
 
     .modal-container {
         position: absolute;
