--- a/mysite/src/variable.scss
+++ b/mysite/src/variable.scss
@@ -25,6 +25,13 @@ $light-header-background-color: rgba(210, 210, 210, 0.4);
 $insta-board-color: grey;
 $resume-board-color: #505498;
 $github-board-color: #101010;
+$cmu-board-color: #97040c;
+$major-board-color: #8ecf89;
+$music-board-color: #1eb69c;
+$reading-board-color: #f8bd2c;
+$arsenal-board-color: #ac6842;
+$navlab-board-color: #cccb9b;
+$remitly-board-color: #273e6c;
 $gray-border-color: rgba(200, 200, 200, 1);
 
 $gray-text-color: rgba(160, 160, 160, 1);
