Apply pointer cursor to clickable components

--- a/mysite/src/modalView.scss
+++ b/mysite/src/modalView.scss
@@ -33,6 +33,7 @@
             width: $close-button-side;
             height: $close-button-side;
             background-color: blue;
+            cursor: pointer;
         }
     }
 }
