--- a/mysite/src/screenComponent/bulletin.scss
+++ b/mysite/src/screenComponent/bulletin.scss
@@ -35,6 +35,10 @@
         }
     }
 
+    &.clickable {
+        cursor: pointer;
+    }
+
     &.resume {
         background-color: $resume-board-color;
     }
